--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "lint:fix": "eslint --fix . && prettier . '!.docker' -w"
   },
   "dependencies": {
+    "@clerk/localizations": "^1.22.0",
+    "@clerk/nextjs": "^4.21.13",
+    "@clerk/themes": "^1.7.5",
+    "@prisma/client": "^4.16.2",
+    "micro": "^10.0.1",
     "next": "13.4.7",
+    "next-connect": "^1.0.0-next.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "svix": "^1.5.2"
   },
   "devDependencies": {
     "@dkshs/eslint-config": "^1.1.0",
@@ -25,6 +32,7 @@
     "postcss": "8.4.24",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
+    "prisma": "^4.16.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
