--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@clerk/nextjs": "^4.21.13",
     "@clerk/themes": "^1.7.5",
     "@prisma/client": "^4.16.2",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "framer-motion": "^10.12.18",
+    "lucide-react": "^0.257.0",
     "micro": "^10.0.1",
     "next": "13.4.7",
     "next-connect": "^1.0.0-next.4",
