--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next-connect": "^1.0.0-next.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "svix": "^1.5.2"
+    "svix": "^1.5.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@dkshs/eslint-config": "^1.1.0",
@@ -37,7 +38,11 @@
     "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^4.16.2",
     "tailwindcss": "3.3.2",
+    "tsx": "^3.12.7",
     "typescript": "5.1.6"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "prettier": {
     "printWidth": 80,
