--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@clerk/themes": "^1.7.5",
     "@prisma/client": "^4.16.2",
     "@radix-ui/react-dialog": "^1.0.4",
+    "@tanstack/react-query": "^4.29.19",
+    "axios": "^1.4.0",
     "framer-motion": "^10.12.18",
     "lucide-react": "^0.257.0",
     "micro": "^10.0.1",
