--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-connect": "^1.0.0-next.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-player": "^2.12.0",
     "svix": "^1.5.2",
     "zod": "^3.21.4"
   },
