--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@clerk/themes": "^1.7.5",
     "@prisma/client": "^4.16.2",
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-query": "^4.29.19",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.18",
