--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ SITE_BASEURL="http://localhost:3000"
 NEXT_PUBLIC_API_URL="${SITE_BASEURL}/api"
 
 # IMG
-NEXT_PUBLIC_IMG_DOMAINS="img.clerk.com,YOUR_IMG_DOMAINS"
+NEXT_PUBLIC_IMG_DOMAINS="img.clerk.com,i.ytimg.com,img.youtube.com,YOUR_IMG_DOMAINS"
 
 # Clerk Keys
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="YOUR_CLERK_PUBLISHABLE_KEY"
