--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/localizations": "^1.22.0",
     "@clerk/nextjs": "^4.21.13",
     "@clerk/themes": "^1.7.5",
+    "@hookform/resolvers": "^3.1.1",
     "@prisma/client": "^4.16.2",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -26,7 +27,9 @@
     "next-connect": "^1.0.0-next.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-player": "^2.12.0",
+    "react-toastify": "^9.1.3",
     "svix": "^1.5.2",
     "zod": "^3.21.4"
   },
