--- a/package.json
+++ b/package.json
@@ -11,54 +11,44 @@
     "lint:fix": "eslint --fix . && prettier . '!.docker' -w"
   },
   "dependencies": {
-    "@clerk/localizations": "^1.22.0",
-    "@clerk/nextjs": "^4.21.13",
+    "@clerk/localizations": "^1.25.1",
+    "@clerk/nextjs": "^4.23.4",
     "@clerk/themes": "^1.7.5",
-    "@hookform/resolvers": "^3.1.1",
-    "@prisma/client": "^4.16.2",
+    "@hookform/resolvers": "^3.3.1",
+    "@prisma/client": "^5.2.0",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@tanstack/react-query": "^4.29.19",
-    "axios": "^1.4.0",
-    "framer-motion": "^10.12.18",
-    "lucide-react": "^0.257.0",
+    "@tanstack/react-query": "^4.33.0",
+    "axios": "^1.5.0",
+    "framer-motion": "^10.16.4",
+    "lucide-react": "^0.274.0",
     "micro": "^10.0.1",
-    "next": "13.4.7",
-    "next-connect": "^1.0.0-next.4",
+    "next": "13.4.19",
+    "next-connect": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.1",
-    "react-player": "^2.12.0",
+    "react-hook-form": "^7.46.1",
+    "react-player": "^2.13.0",
     "react-toastify": "^9.1.3",
-    "svix": "^1.5.2",
-    "zod": "^3.21.4"
+    "svix": "^1.11.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@dkshs/eslint-config": "^1.1.0",
-    "@types/node": "20.3.2",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
-    "postcss": "8.4.24",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "prisma": "^4.16.2",
-    "tailwindcss": "3.3.2",
-    "tsx": "^3.12.7",
-    "typescript": "5.1.6"
+    "@dkshs/eslint-config": "^1.3.5",
+    "@types/node": "20.5.9",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
+    "postcss": "8.4.29",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "prisma": "^5.2.0",
+    "tailwindcss": "3.3.3",
+    "tsx": "^3.12.8",
+    "typescript": "5.2.2"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
-  },
-  "prettier": {
-    "printWidth": 80,
-    "tabWidth": 2,
-    "singleQuote": false,
-    "trailingComma": "all",
-    "arrowParens": "always",
-    "semi": true,
-    "endOfLine": "auto"
   }
 }
