--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,4 +17,5 @@ jobs:
           node-version: "18"
           cache: "npm"
       - uses: bahmutov/npm-install@v1
+      - run: cp .env.example .env
       - run: npm run lint
