feat: removing deprecated functions and improving some codes
* feat: adding environment variable validation

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# When adding additional environment variables, the schema in "/src/env.mjs"
+# should be updated accordingly.
+
 # ------ DOCKER ENV ------
 # Postgres
 POSTGRES_PORT=5432
@@ -9,17 +12,22 @@ PGADMIN_DEFAULT_PASSWORD="postgres"
 
 # ------ PROJECT ENV ------
 # Database (Prisma)
-DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${POSTGRES_PORT}/postgres?pgbouncer=true&connect_timeout=15"
 DATABASE_URL_NON_POOLING="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${POSTGRES_PORT}/postgres"
+DATABASE_URL="${DATABASE_URL_NON_POOLING}?pgbouncer=true&connect_timeout=15"
 
+# SEO ENV
+# ------------------------------------------------
+# these variables are used for the site's SEO
+NEXT_PUBLIC_SITE_NAME="YOUR_SITE_NAME"
+NEXT_PUBLIC_SITE_LOCALE="en_US"
 # URLs
-SITE_BASEURL="http://localhost:3000"
-
-# API
-NEXT_PUBLIC_API_URL="${SITE_BASEURL}/api"
+NEXT_PUBLIC_SITE_BASEURL="http://localhost:3000" # in PROD put the URL of your project
 
 # IMG
 NEXT_PUBLIC_IMG_DOMAINS="img.clerk.com,i.ytimg.com,img.youtube.com,YOUR_IMG_DOMAINS"
+
+# API
+NEXT_PUBLIC_API_URL="${SITE_BASEURL}/api"
 
 # Clerk Keys
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="YOUR_CLERK_PUBLISHABLE_KEY"
