--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,13 @@
 name: CI
 
-on: [pull_request]
+on: pull_request
 
 concurrency:
-  group: ci-${{ github.event.pull_request.title }}
+  group: ${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
+
+env:
+  SKIP_ENV_VALIDATION: true
 
 jobs:
   lint-styles:
@@ -12,10 +15,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - uses: actions/setup-node@v4
         with:
+          cache: "pnpm"
           node-version: "18"
-          cache: "npm"
-      - uses: bahmutov/npm-install@v1
-      - run: cp .env.example .env
-      - run: npm run lint
+      - name: Install dependencies
+        run: pnpm install
+      - run: pnpm run lint
