--- a/package.json
+++ b/package.json
@@ -6,24 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "vercel:build": "prisma generate && prisma migrate deploy && next build",
-    "lint": "next lint --dir . && eslint . && prettier . '!.docker' -c",
-    "lint:fix": "eslint --fix . && prettier . '!.docker' -w"
+    "vercel:build": "prisma migrate deploy && next build",
+    "postinstall": "prisma generate",
+    "prisma:seed": "tsx prisma/seed.ts",
+    "lint": "next lint --dir . && eslint . && prettier . -c",
+    "lint:fix": "eslint --fix . && prettier . -w"
   },
   "dependencies": {
     "@clerk/localizations": "^1.26.7",
     "@clerk/nextjs": "^4.25.7",
     "@clerk/themes": "^1.7.9",
     "@hookform/resolvers": "^3.3.2",
-    "@prisma/client": "^5.4.2",
+    "@prisma/client": "^5.5.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^5.0.5",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.289.0",
     "micro": "^10.0.1",
-    "next": "13.5.6",
+    "next": "14.0.0",
     "next-connect": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -35,12 +38,12 @@
   },
   "devDependencies": {
     "@dkshs/eslint-config": "^1.3.5",
-    "@types/node": "20.8.2",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
+    "@types/node": "20.8.9",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
     "autoprefixer": "10.4.16",
     "eslint": "8.52.0",
-    "eslint-config-next": "13.5.6",
+    "eslint-config-next": "14.0.0",
     "postcss": "8.4.31",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "prisma": "^5.5.2",
@@ -49,6 +52,6 @@
     "typescript": "5.2.2"
   },
   "prisma": {
-    "seed": "tsx prisma/seed.ts"
+    "seed": "pnpm run prisma:seed"
   }
 }
