--- a/.prettierignore
+++ b/.prettierignore
@@ -31,3 +31,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Ignore lockfiles for PNPM, NPM and YARN
+pnpm-lock.yaml
+package-lock.json
+yarn.lock
