--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "@tanstack/react-query": "^5.14.2",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
-    "lucide-react": "^0.298.0",
+    "lucide-react": "^0.299.0",
     "micro": "^10.0.1",
     "next": "14.0.4",
     "next-connect": "^1.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18",
+    "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-player": "^2.14.1",
     "react-toastify": "^9.1.3",
@@ -37,19 +37,19 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@dkshs/eslint-config": "^1.4.0",
-    "@types/node": "20.10.0",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
-    "autoprefixer": "10.4.16",
-    "eslint": "8.56.0",
+    "@dkshs/eslint-config": "1.4.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "postcss": "8.4.32",
+    "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "prisma": "^5.7.1",
-    "tailwindcss": "3.3.7",
+    "tailwindcss": "^3.4.0",
     "tsx": "^4.7.0",
-    "typescript": "5.3.3"
+    "typescript": "^5"
   },
   "prisma": {
     "seed": "pnpm run prisma:seed"
