chore: group clerk dependencies in renovate.json

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -21,6 +21,10 @@
       "automerge": true,
       "matchPackagePatterns": ["^@types/"],
       "matchUpdateTypes": ["patch", "minor"]
+    },
+    {
+      "groupName": "clerk packages",
+      "matchPackagePatterns": ["^@clerk/"]
     }
   ]
 }
