chore: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -24,10 +24,10 @@ NEXT_PUBLIC_SITE_LOCALE="en_US"
 NEXT_PUBLIC_SITE_BASEURL="http://localhost:3000" # in PROD put the URL of your project
 
 # IMG
-NEXT_PUBLIC_IMG_DOMAINS="img.clerk.com,i.ytimg.com,img.youtube.com,YOUR_IMG_DOMAINS"
+NEXT_PUBLIC_IMG_DOMAINS="img.clerk.com,i.ytimg.com,img.youtube.com"
 
 # API
-NEXT_PUBLIC_API_URL="${SITE_BASEURL}/api"
+NEXT_PUBLIC_API_URL="${NEXT_PUBLIC_SITE_NAME}/api"
 
 # Clerk Keys
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="YOUR_CLERK_PUBLISHABLE_KEY"
