--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,7 @@ NEXT_PUBLIC_SITE_BASEURL="http://localhost:3000" # in PROD put the URL of your p
 NEXT_PUBLIC_IMG_DOMAINS="img.clerk.com,i.ytimg.com,img.youtube.com"
 
 # API
-NEXT_PUBLIC_API_URL="${NEXT_PUBLIC_SITE_NAME}/api"
+NEXT_PUBLIC_API_URL="${NEXT_PUBLIC_SITE_BASEURL}/api"
 
 # Clerk Keys
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="YOUR_CLERK_PUBLISHABLE_KEY"
