--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "postinstall": "prisma generate",
     "prisma:seed": "tsx prisma/seed.ts",
     "lint": "eslint .",
-    "lint:fix": "pnpm lint --fix"
+    "lint:fix": "pnpm lint --fix",
+    "prepare": "husky",
+    "commitlint": "commitlint --edit",
+    "pre-commit": "lint-staged"
   },
   "dependencies": {
     "@clerk/localizations": "^2.4.3",
@@ -38,6 +41,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@dkshs/eslint-config": "2.5.0",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.3",
@@ -45,6 +50,8 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.5",
     "postcss": "^8.4.38",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.14.0",
@@ -54,5 +61,8 @@
   },
   "prisma": {
     "seed": "pnpm prisma:seed"
+  },
+  "lint-staged": {
+    "*": "pnpm lint:fix"
   }
 }
