--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,43 @@
 {
   "compilerOptions": {
+    // Compilation and Target Settings
     "incremental": true,
-    "target": "es5",
+    "target": "ES2022",
     "jsx": "preserve",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "module": "esnext",
-    "moduleResolution": "node",
+
+    // Library Definitions
+    "lib": ["DOM", "DOM.Iterable", "ES2022"],
+
+    // Module Resolution and Detection
+    "moduleDetection": "force",
+    "baseUrl": ".",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+
+    // Path Aliases
     "paths": {
       "@/*": ["./src/*"]
     },
+
+    // JavaScript and Strictness
     "resolveJsonModule": true,
     "allowJs": true,
+    "checkJs": true,
     "strict": true,
+    "noUncheckedIndexedAccess": true,
+
+    // Output and Interoperability
     "noEmit": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.cjs",
+    "**/*.js",
+  ],
   "exclude": ["node_modules"]
 }
