refactor: improve project

--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,7 @@ PGADMIN_DEFAULT_PASSWORD="postgres"
 
 # ------ PROJECT ENV ------
 # Database (Prisma)
-DATABASE_URL_NON_POOLING="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${POSTGRES_PORT}/postgres"
-DATABASE_URL="${DATABASE_URL_NON_POOLING}?pgbouncer=true&connect_timeout=15"
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${POSTGRES_PORT}/postgres"
 
 # SEO ENV
 # ------------------------------------------------
@@ -21,13 +20,13 @@ DATABASE_URL="${DATABASE_URL_NON_POOLING}?pgbouncer=true&connect_timeout=15"
 NEXT_PUBLIC_SITE_NAME="YOUR_SITE_NAME"
 NEXT_PUBLIC_SITE_LOCALE="en_US"
 # URLs
-NEXT_PUBLIC_SITE_BASEURL="http://localhost:3000" # in PROD put the URL of your project
+NEXT_PUBLIC_SITE_BASEURL="http://localhost:3000"
 
 # IMG
 NEXT_PUBLIC_IMG_DOMAINS="img.clerk.com,i.ytimg.com,img.youtube.com"
 
 # API
-NEXT_PUBLIC_API_URL="${NEXT_PUBLIC_SITE_BASEURL}/api"
+NEXT_PUBLIC_API_URL="http://localhost:3000/api"
 
 # Clerk Keys
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="YOUR_CLERK_PUBLISHABLE_KEY"
