--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     "allowJs": true,
     "checkJs": true,
     "strict": true,
+    "exactOptionalPropertyTypes": true,
     "noUncheckedIndexedAccess": true,
 
     // Output and Interoperability
@@ -31,6 +32,8 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "skipLibCheck": true,
+
+    // Custom Plugins
     "plugins": [{ "name": "next" }]
   },
   "include": [
