--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,15 +14,23 @@ jobs:
     name: Lint Styles
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v3
-      - uses: actions/setup-node@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+
+      - name: Setup node
+        uses: actions/setup-node@v4
         with:
           cache: pnpm
           node-version: 20
+
       - name: Install dependencies
         run: pnpm install
-      - run: pnpm lint
+
+      - name: Running lint
+        run: pnpm lint
 
   lint-commits:
     name: Lint Commits
