--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@
 
 # testing
 /coverage
-.docker/postgres_data
 
 # next.js
 /.next/
@@ -24,9 +23,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# local env files
-.env
+.pnpm-debug.log*
 
 # vercel
 .vercel
@@ -34,3 +31,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# local env files
+.env*.local
+.env
