--- a/package.json
+++ b/package.json
@@ -3,64 +3,71 @@
   "type": "module",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@9.11.0",
+  "packageManager": "pnpm@9.12.1",
+  "description": "A project based on Youtube.",
+  "author": "DKSHS",
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "vercel:build": "prisma migrate deploy && next build",
-    "postinstall": "prisma generate",
-    "prisma:seed": "tsx prisma/seed.ts",
     "lint": "eslint .",
-    "lint:fix": "pnpm lint --fix",
+    "lint:fix": "eslint . --fix",
     "prepare": "husky",
     "commitlint": "commitlint --edit",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "postinstall": "prisma generate",
+    "prisma:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@clerk/localizations": "^3.0.4",
-    "@clerk/nextjs": "^5.6.0",
-    "@clerk/themes": "^2.1.30",
-    "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "^5.19.1",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.0",
+    "@clerk/localizations": "^3.2.1",
+    "@clerk/nextjs": "^5.7.3",
+    "@clerk/themes": "^2.1.36",
+    "@prisma/client": "^5.20.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.11.1",
-    "@tanstack/react-query": "^5.56.2",
-    "axios": "^1.7.7",
-    "framer-motion": "^11.5.6",
-    "lucide-react": "^0.445.0",
-    "micro": "^10.0.1",
-    "next": "14.2.13",
-    "next-connect": "^1.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.8",
+    "lucide-react": "^0.452.0",
+    "next": "14.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.0",
     "react-player": "^2.16.0",
-    "react-toastify": "^10.0.5",
-    "svix": "^1.35.0",
+    "react-toastify": "^10.0.6",
+    "svix": "^1.37.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
-    "@dkshs/eslint-config": "3.1.2",
-    "@tanstack/eslint-plugin-query": "^5.57.1",
-    "@types/node": "^22.6.0",
-    "@types/react": "^18.3.8",
-    "@types/react-dom": "^18.3.0",
+    "@dkshs/eslint-config": "3.2.0",
+    "@types/node": "^22.7.5",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.11.1",
+    "eslint": "^9.12.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "postcss": "^8.4.47",
-    "prisma": "^5.19.1",
+    "prisma": "^5.20.0",
     "tailwindcss": "^3.4.13",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
   },
   "prisma": {
     "seed": "pnpm prisma:seed"
+  },
+  "engines": {
+    "node": ">=20"
   },
   "lint-staged": {
     "*": "pnpm lint:fix"
