--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@clerk/nextjs": "^5.7.5",
     "@clerk/themes": "^2.1.37",
     "@prisma/client": "^5.21.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.2.0",
