--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@clerk/nextjs": "^6.0.2",
     "@clerk/themes": "^2.1.39",
     "@prisma/client": "^5.21.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
@@ -33,6 +34,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.11.1",
+    "@tanstack/react-query": "^5.59.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
@@ -49,6 +51,7 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@dkshs/eslint-config": "3.3.0",
+    "@tanstack/eslint-plugin-query": "^5.59.7",
     "@types/node": "^22.8.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
