--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@clerk/nextjs": "^6.0.2",
     "@clerk/themes": "^2.1.39",
     "@prisma/client": "^5.21.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
