--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,9 @@ NEXT_PUBLIC_SITE_BASEURL="http://localhost:3000"
 # API
 NEXT_PUBLIC_API_URL="http://localhost:3000/api"
 
+# Google Cloud
+GC_API_KEY="YOUR_GC_API_KEY"
+
 # Clerk Keys
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="YOUR_CLERK_PUBLISHABLE_KEY"
 CLERK_SECRET_KEY="YOUR_CLERK_SECRET_KEY"
