chore: add check code script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Running lint
-        run: pnpm lint
+      - name: Check code
+        run: pnpm check
 
   lint-commits:
     name: Lint Commits
