--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "vercel:build": "prisma migrate deploy && next build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "typecheck": "tsc --noEmit",
+    "check": "pnpm lint && pnpm typecheck",
     "prepare": "husky",
     "commitlint": "commitlint --edit",
     "pre-commit": "lint-staged",
