--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "packageManager": "pnpm@10.7.0",
   "description": "A project based on Youtube.",
-  "author": "DKSHS",
+  "author": "Nicolas Contiero <https://github.com/ncontiero>",
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
@@ -56,7 +56,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
-    "@dkshs/eslint-config": "4.6.0",
+    "@ncontiero/eslint-config": "5.1.1",
     "@tanstack/eslint-plugin-query": "^5.68.0",
     "@types/node": "^22.13.14",
     "@types/react": "^19.0.12",
