chore: run database migrations as part of build process

--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma migrate deploy && next build",
     "start": "next start",
-    "vercel:build": "prisma migrate deploy && next build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "typecheck": "tsc --noEmit",
