--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "Nicolas Contiero <https://github.com/ncontiero>",
   "license": "MIT",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "prisma migrate deploy && next build",
     "start": "next start",
     "lint": "eslint .",
