--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@clerk/localizations": "^3.13.5",
     "@clerk/nextjs": "^6.13.0",
     "@clerk/themes": "^2.2.27",
+    "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -44,8 +45,10 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
+    "next-safe-action": "^7.10.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.55.0",
     "react-player": "^2.16.0",
     "react-toastify": "^11.0.5",
     "svix": "^1.63.1",
