--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,6 @@
 POSTGRES_PORT=5432
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="postgresw"
-# PGAdmin
-PGADMIN_DEFAULT_EMAIL="postgres@email.com"
-PGADMIN_DEFAULT_PASSWORD="postgres"
 
 # ------ PROJECT ENV ------
 # Database (Prisma)
@@ -17,13 +14,10 @@ DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${POS
 # SEO ENV
 # ------------------------------------------------
 # these variables are used for the site's SEO
-NEXT_PUBLIC_SITE_NAME="YOUR_SITE_NAME"
-NEXT_PUBLIC_SITE_LOCALE="en_US"
+SITE_NAME="DkTube"
+SITE_LOCALE="pt_BR"
 # URLs
-NEXT_PUBLIC_SITE_BASEURL="http://localhost:3000"
-
-# API
-NEXT_PUBLIC_API_URL="http://localhost:3000/api"
+SITE_BASEURL="http://localhost:3000"
 
 # Google Cloud
 GC_API_KEY="YOUR_GC_API_KEY"
