--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@clerk/nextjs": "^6.31.10",
     "@clerk/themes": "^2.4.18",
     "@hookform/resolvers": "^5.2.1",
+    "@prisma/adapter-pg": "^6.16.0",
     "@prisma/client": "^6.16.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
