--- a/package.json
+++ b/package.json
@@ -51,25 +51,25 @@
     "react-hook-form": "^7.65.0",
     "react-player": "^2.16.1",
     "react-toastify": "^11.0.5",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
     "@ncontiero/eslint-config": "6.3.1",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^24.7.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.37.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.4",
     "postcss": "^8.5.6",
     "prisma": "^6.17.1",
-    "tailwindcss": "^3.4.18",
-    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss": "^4.1.14",
     "tsx": "^4.20.6",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   },
   "engines": {
