--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "Nicolas Contiero <https://github.com/ncontiero>",
   "license": "MIT",
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
@@ -18,7 +18,7 @@
     "prepare": "husky",
     "commitlint": "commitlint --edit",
     "pre-commit": "lint-staged",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma generate && next typegen",
     "prisma:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
@@ -43,11 +43,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.548.0",
-    "next": "15.5.6",
+    "next": "16.0.0",
     "next-safe-action": "^8.0.11",
     "next-themes": "^0.4.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
     "react-player": "^2.16.1",
     "react-toastify": "^11.0.5",
@@ -60,8 +60,8 @@
     "@ncontiero/eslint-config": "6.4.0",
     "@tailwindcss/postcss": "^4.1.16",
     "@types/node": "^24.9.1",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "eslint": "^9.38.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
