--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@10.20.0",
+  "packageManager": "pnpm@10.21.0",
   "description": "A project based on Youtube.",
   "author": "Nicolas Contiero <https://github.com/ncontiero>",
   "license": "MIT",
@@ -26,8 +26,8 @@
     "@clerk/nextjs": "^6.34.5",
     "@clerk/themes": "^2.4.33",
     "@hookform/resolvers": "^5.2.2",
-    "@prisma/adapter-pg": "^6.19.0",
-    "@prisma/client": "^6.19.0",
+    "@prisma/adapter-pg": "6.19.0",
+    "@prisma/client": "6.19.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -51,14 +51,14 @@
     "react-hook-form": "^7.66.0",
     "react-player": "^3.3.3",
     "react-toastify": "^11.0.5",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
     "@ncontiero/eslint-config": "6.4.1",
-    "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/postcss": "4.1.17",
     "@types/node": "^24.10.0",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
@@ -66,8 +66,8 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
     "postcss": "^8.5.6",
-    "prisma": "^6.19.0",
-    "tailwindcss": "^4.1.17",
+    "prisma": "6.19.0",
+    "tailwindcss": "4.1.17",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
