refactor: migrate to prisma v7

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "commitlint": "commitlint --edit",
     "pre-commit": "lint-staged",
     "postinstall": "prisma generate && next typegen",
-    "prisma:seed": "tsx prisma/seed.ts"
+    "prisma:seed": "prisma db seed"
   },
   "dependencies": {
     "@clerk/localizations": "^3.28.1",
@@ -62,6 +62,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "19.2.6",
     "@types/react-dom": "19.2.3",
+    "dotenv": "^17.2.3",
     "eslint": "^9.39.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
